[tool.poetry]
name = "book-queue"
version = "0.1.0"
description = ""
authors = ["ShaddyDC <shaddy@shaddy.dev>"]
readme = "README.md"

[tool.poetry.scripts]
book-queue = "book_queue.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.4.1"}
tabulate = "^0.8.9"
SQLAlchemy = "^1.4.34"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
